crates/gridwell-writer-quarto/tests/snapshots/snapshots__snapshot_summary_rows.snap
---
source: crates/gridwell-writer-quarto/tests/snapshots.rs
expression: "render(\"minimal/summary_rows.json\")"
---
{
  "c": [
    [
      "",
      [
        "quarto-table",
        "cell-output-display"
      ],
      []
    ],
    [
      {
        "c": [
          [
            "",
            [],
            []
          ],
          [
            null,
            []
          ],
          [
            [
              {
                "t": "AlignLeft"
              },
              {
                "t": "ColWidthDefault"
              }
            ],
            [
              {
                "t": "AlignRight"
              },
              {
                "t": "ColWidthDefault"
              }
            ],
            [
              {
                "t": "AlignRight"
              },
              {
                "t": "ColWidthDefault"
              }
            ]
          ],
          [
            [
              "",
              [],
              []
            ],
            [
              [
                [
                  "",
                  [],
                  []
                ],
                [
                  [
                    [
                      "",
                      [],
                      []
                    ],
                    {
                      "t": "AlignDefault"
                    },
                    1,
                    1,
                    [
                      {
                        "c": [
                          {
                            "c": "Item",
                            "t": "Str"
                          }
                        ],
                        "t": "Plain"
                      }
                    ]
                  ],
                  [
                    [
                      "",
                      [],
                      []
                    ],
                    {
                      "t": "AlignDefault"
                    },
                    1,
                    1,
                    [
                      {
                        "c": [
                          {
                            "c": "Qty",
                            "t": "Str"
                          }
                        ],
                        "t": "Plain"
                      }
                    ]
                  ],
                  [
                    [
                      "",
                      [],
                      []
                    ],
                    {
                      "t": "AlignDefault"
                    },
                    1,
                    1,
                    [
                      {
                        "c": [
                          {
                            "c": "Total",
                            "t": "Str"
                          }
                        ],
                        "t": "Plain"
                      }
                    ]
                  ]
                ]
              ]
            ]
          ],
          [
            [
              [
                "",
                [],
                []
              ],
              0,
              [],
              [
                [
                  [
                    "",
                    [],
                    []
                  ],
                  [
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "Apples",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ],
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "5",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ],
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "$7.50",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ]
                  ]
                ],
                [
                  [
                    "",
                    [],
                    []
                  ],
                  [
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "Bread",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ],
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "2",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ],
                    [
                      [
                        "",
                        [],
                        []
                      ],
                      {
                        "t": "AlignDefault"
                      },
                      1,
                      1,
                      [
                        {
                          "c": [
                            {
                              "c": "$8.00",
                              "t": "Str"
                            }
                          ],
                          "t": "Plain"
                        }
                      ]
                    ]
                  ]
                ]
              ]
            ]
          ],
          [
            [
              "",
              [],
              []
            ],
            []
          ]
        ],
        "t": "Table"
      }
    ]
  ],
  "t": "Div"
}
